--- a/estilo/style.css
+++ b/estilo/style.css
@@ -72,7 +72,7 @@ section.imagem > p {
   padding: 5px;
 }
 section#imagem1 {
-  background-image: url('../imagens/background001.jpg');  
+  background-image: url('../imagens/background001pq.jpg');  
   background-position: right center;
   
 }
