--- a/estilo/style.css
+++ b/estilo/style.css
@@ -74,6 +74,7 @@ section#imagem1 {
   background-image: url('../imagens/background001pequeno.jpg');  
   background-position: center right;
   background-size: cover;
+  background-repeat: no-repeat;
   
   
 }
