--- a/estilo/style.css
+++ b/estilo/style.css
@@ -71,17 +71,17 @@ section.imagem > p {
   padding: 5px;
 }
 section#imagem1 {
-  background-image: url('../imagens/background001pequeno.jpg');  
+  background-image: url('../imagens/background001.jpg');  
   background-position: center right;
   background-size: cover;
-  height: 50vh;
+  
   
   
 }
 section#imagem2 {
   background-image: url('../imagens/background002.jpg');
   background-size: cover;
-  height: 50vh;
+  
 }
 footer {
     background-color: black;
