--- a/estilo/style.css
+++ b/estilo/style.css
@@ -73,10 +73,9 @@ section.imagem > p {
 section#imagem1 {
   background-image: url('../imagens/background001.jpg');  
   background-position: center right;
-  background-size: contain cover;
-  
-  
-  
+  background-size: cover;
+
+   
   
 }
 section#imagem2 {
